force-app/main/default/objects/Cruise_Room__c/Cruise_Room__c.object-meta.xml
<CustomObject>
    <label>Cruise Room</label>
    <nameField>
        <displayFormat>RoomID-{000000000}</displayFormat>
        <label>Room ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cruise Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>