force-app/main/default/objects/Cruise_Room__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <label>Cruise</label>
    <referenceTo>Cruise__c</referenceTo>
    <relationshipLabel>Cruise Rooms</relationshipLabel>
    <relationshipName>Cruise_Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>