force-app/main/default/objects/Cruise_Room__c/fields/Passenger_Price__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Price__c</fullName>
    <label>Passenger Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>