force-app/main/default/objects/Cruise_Room__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>(Capacity__c  *  Passenger_Price__c ) + Room_Type__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>