force-app/main/default/objects/Cruise_Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Type</label>
    <referenceTo>Room_Type__c</referenceTo>
    <relationshipLabel>Cruise Rooms</relationshipLabel>
    <relationshipName>Cruise_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>