force-app/main/default/objects/Cruise_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capacity__c</columns>
    <columns>Cruise__c</columns>
    <columns>Price__c</columns>
    <columns>Passenger_Price__c</columns>
    <columns>Room_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>